crates/plotnik-tests/tests/02-parser/recovery_validation/anchor_as_field_value_strict.txt
Q = (pair key: .! )
------------------ DIAGNOSTICS -------------------
error: an anchor cannot be a field value
 --> query.ptk:1:16
  |
1 | Q = (pair key: .! )
  |                ^^
  |
help: anchors order siblings: `(parent (a) . (b))`; a field needs a pattern to match
